server/crates/djinn-agent/src/extension/snapshots/djinn_agent__extension__tests__lsp_tool_schema.snap
---
source: crates/djinn-agent/src/extension/tests.rs
expression: "serde_json::to_value(tool_lsp()).unwrap()"
---
{
  "description": "Query the Language Server Protocol for code navigation. Operations: hover (type info at position), definition (go to definition), references (find all references), symbols (list document symbols with optional depth/kind/name filtering). Line and character are 1-based for non-symbol operations.",
  "inputSchema": {
    "properties": {
      "character": {
        "description": "1-based column number (required for hover, definition, references when symbol is omitted)",
        "minimum": 1,
        "type": "integer"
      },
      "depth": {
        "description": "Maximum nesting depth for operation='symbols'. 0 = top-level only; omitted = unlimited",
        "minimum": 0,
        "type": "integer"
      },
      "file_path": {
        "description": "Absolute or worktree-relative file path",
        "type": "string"
      },
      "kind": {
        "description": "Comma-separated symbol kind filter for operation='symbols' (e.g. function,method,struct,class,interface,enum,variable,constant,module,field,property,constructor,type_parameter)",
        "type": "string"
      },
      "line": {
        "description": "1-based line number (required for hover, definition, references)",
        "minimum": 1,
        "type": "integer"
      },
      "name_filter": {
        "description": "Case-insensitive substring filter applied to symbol names and name paths for operation='symbols'",
        "type": "string"
      },
      "operation": {
        "description": "LSP operation to perform",
        "enum": [
          "hover",
          "definition",
          "references",
          "symbols"
        ],
        "type": "string"
      },
      "symbol": {
        "description": "Optional symbol name path for hover, definition, or references as an alternative to line+character",
        "type": "string"
      }
    },
    "required": [
      "operation",
      "file_path"
    ],
    "type": "object"
  },
  "name": "lsp"
}
