server/crates/djinn-agent/src/extension/snapshots/djinn_agent__extension__tests__reviewer_tool_names.snap
---
source: crates/djinn-agent/src/extension/tests.rs
assertion_line: 1723
expression: names
---
[
  "task_show",
  "task_list",
  "task_activity_list",
  "memory_read",
  "memory_search",
  "memory_list",
  "shell",
  "read",
  "lsp",
  "code_graph",
  "ci_job_log",
  "github_search",
  "output_view",
  "output_grep",
  "submit_review"
]
